<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_4"
    android:gravity="center_horizontal"
    tools:context="com.app.main.InicioActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
        <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	        
            <LinearLayout
                android:id="@+id/llBuscar"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:orientation="horizontal" 
	            android:layout_margin="@dimen/margin_all" >

	            <EditText
	                android:id="@+id/etBuscar"
	                android:layout_width="fill_parent"
	                android:layout_height="45dp"
	                android:layout_weight="1"
	                android:background="@color/gris_1"
	                android:inputType="number"
	                android:hint="@string/et_buscar"
	                android:padding="@dimen/margin_all"
	                 />
	
	            <Button
	                android:id="@+id/btnBuscar"
	                android:layout_width="50dp"
	                android:layout_height="45dp"
	                android:paddingLeft="12dp"
	                android:background="@drawable/esq23_gris3"
	                android:drawableLeft="@drawable/buscar"/>
       	 	</LinearLayout>
    		
            <LinearLayout
                android:id="@+id/llFormulario"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="@dimen/margin_all"
        		android:orientation="vertical" >

				<TextView
				    android:id="@+id/tvCedula2"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_siguiente"
                    android:padding="@dimen/margin_all"
                    android:textColor="@color/gris_2"
                    android:layout_margin="@dimen/margin_all" />
				
				<EditText
				    android:id="@+id/etCed"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/et_cedula"
				    android:background="@drawable/esq1_gris2"
				    android:padding="@dimen/margin_all"
				    android:inputType="number"
				    android:layout_margin="@dimen/margin_all" />
				
				<EditText
				    android:id="@+id/etNombre"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/et_nombre"
				    android:background="@drawable/esq1_gris2"
				    android:padding="@dimen/margin_all"
				    android:layout_margin="@dimen/margin_all" />
				
				<EditText
				    android:id="@+id/etNombre2"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/et_nombre"
				    android:background="@color/gris_2"
				    android:padding="@dimen/margin_all"
				    android:layout_margin="@dimen/margin_all" />

				
				<EditText
				    android:id="@+id/etCentro"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/et_centro" 
				    android:background="@color/gris_2"
				    android:padding="@dimen/margin_all"
				    android:layout_margin="@dimen/margin_all" />
				
				<EditText
				    android:id="@+id/etCargo"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:hint="@string/et_cargo"
				    android:background="@drawable/esq3_gris2"
				    android:padding="@dimen/margin_all"
				    android:layout_margin="@dimen/margin_all" />

    		</LinearLayout>
    		
            
            
            <LinearLayout
                android:id="@+id/llMostrar"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="@dimen/margin_all"
        		android:textColor="@color/gris_2"
        		android:orientation="vertical" >

				<TextView
				    android:id="@+id/tvCedula"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_siguiente"
                    android:textColor="@color/gris_2"
                    android:layout_margin="@dimen/margin_all" />
				
				<TextView
				    android:id="@+id/tvNombre"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_siguiente"
                    android:textColor="@color/gris_2"
                    android:layout_margin="@dimen/margin_all" />

				<TextView
				    android:id="@+id/tvCentro"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_siguiente" 
                    android:textColor="@color/gris_2"
                  	android:layout_margin="@dimen/margin_all" />
				<TextView
				    android:id="@+id/tvCargo"
				    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_siguiente"
                    android:textColor="@color/gris_2"
                    android:layout_margin="@dimen/margin_all" />
	        
    		</LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right" >
                
                <Button
                    android:id="@+id/btnRegresarBU"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/margin_all"
                    android:background="@drawable/cir_azul3"
                    android:drawableRight="@drawable/left"
                    android:padding="8dp"
                    android:textColor="@color/gris_1" />

                <Button
                    android:id="@+id/btnEmpezarDiligenciar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/margin_all"
                    android:background="@drawable/cir_verde2"
                    android:drawableLeft="@drawable/right"
                    android:padding="8dp"
                    android:textColor="@color/gris_1" />

                <TextView
                    android:id="@+id/tvSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnEmpezarDiligenciar"
                    android:layout_alignBottom="@+id/btnEmpezarDiligenciar"
                    android:layout_toLeftOf="@+id/btnEmpezarDiligenciar"
                    android:text="@string/tv_diligenciar"
                    android:textColor="@color/gris_1"
                    android:textSize="@dimen/tv_siguiente" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnRegresarBU"
                    android:layout_alignBottom="@+id/btnRegresarBU"
                    android:layout_toRightOf="@+id/btnRegresarBU"
                    android:text="@string/tv_anterior"
                    android:textColor="@color/gris_1"
                    android:textSize="@dimen/tv_siguiente" />

            </RelativeLayout>
        </LinearLayout>

      
        
        
    </ScrollView>

    

</RelativeLayout>