<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_4"
    android:gravity="center_vertical"
    tools:context="com.app.main.InicioActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_all"
                android:text="@string/sf_tvTitulo"
                android:textColor="@color/gris_1"
                android:textSize="@dimen/title_size" />

            <Spinner
                android:id="@+id/spFormato"
                android:layout_width="match_parent"
                android:layout_height="@dimen/combo"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_all"
                android:background="@drawable/esq1_gris2" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right" >
                
                <Button
                    android:id="@+id/btnRegresar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/margin_all"
                    android:background="@drawable/cir_azul3"
                    android:drawableRight="@drawable/left"
                    android:padding="8dp"
                    android:textColor="@color/gris_1" />

                <Button
                    android:id="@+id/btnIniciar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/margin_all"
                    android:background="@drawable/cir_verde2"
                    android:drawableLeft="@drawable/right"
                    android:padding="8dp"
                    android:textColor="@color/gris_1" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnIniciar"
                    android:layout_alignBottom="@+id/btnIniciar"
                    android:layout_toLeftOf="@+id/btnIniciar"
                    android:text="@string/tv_siguiente"
                    android:textColor="@color/gris_1"
                    android:textSize="@dimen/tv_siguiente" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnRegresar"
                    android:layout_alignBottom="@+id/btnRegresar"
                    android:layout_toRightOf="@+id/btnRegresar"
                    android:text="@string/tv_anterior"
                    android:textColor="@color/gris_1"
                    android:textSize="@dimen/tv_siguiente" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
