<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_4"
    android:gravity="center_vertical"
    tools:context="com.app.main.InicioActivity" >
    
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	            
           	<Button
           	    android:id="@+id/btnMenu"
           	    android:layout_width="40dp"
           	    android:layout_height="36dp"
           	    android:layout_gravity="left"
           	    android:background="@drawable/menu" />
           	
           	<RelativeLayout
           	    android:id="@+id/rlDescargar"
           	    android:layout_width="match_parent"
           	    android:layout_height="wrap_content"
           	    android:background="@color/gris_2"
           	    android:padding="6dp" >
           	    
           	    <Button
                	android:id="@+id/btnDescargar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/cir_verde1"
                    android:drawableTop="@drawable/descar"
                    android:padding="2dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/gris_1" />

           	    <TextView
           	        android:id="@+id/tvDescargar"
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
           	        android:layout_marginLeft="50dp"
           	        android:layout_marginTop="8dp"
           	        android:padding="4dp"
           	        android:text="@string/tv_descargar"
           	        android:textSize="17dp" />
           	    <Button
           	        android:id="@+id/btnDescar"
           	        android:layout_width="45dp"
           	        android:layout_height="45dp"
           	        android:layout_alignParentRight="true"
           	        android:layout_centerInParent="false"
           	        android:background="@color/gris_2"
           	        android:drawableTop="@drawable/pasar1"
           	        android:padding="6dp"
           	        android:textColor="@color/gris_1" />
                        
           	</RelativeLayout>
           	
           	<RelativeLayout
           	    android:id="@+id/rlSubir"
           	    android:layout_width="match_parent"
           	    android:layout_height="wrap_content"
           	    android:background="@color/gris_2"
           	    android:padding="6dp"
           	    android:drawableLeft="@drawable/subir"
           	    android:layout_marginTop="1dp" >
           	    
           	    <Button
                	android:id="@+id/btnSubir"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@drawable/cir_verde1"
                    android:drawableTop="@drawable/subir"
                    android:padding="2dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/gris_1" />

           	    <TextView
		        	android:id="@+id/tvSubir"
		        	android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:layout_marginLeft="50dp"
           	        android:layout_marginTop="8dp"
		        	android:padding="4dp"
		        	android:text="@string/tv_subir"
		        	android:textSize="17dp" />
           	    
           	    <Button
           	        android:id="@+id/btnSub"
           	        android:layout_width="45dp"
           	        android:layout_height="45dp"
           	        android:layout_alignParentRight="true"
           	        android:layout_centerInParent="false"
           	        android:background="@color/gris_2"
           	        android:drawableTop="@drawable/pasar1"
           	        android:padding="6dp"
           	        android:textColor="@color/gris_1" />
                        
           	</RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvCN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_all"
                    android:text="@string/inicio_tvCN"
                    android:textColor="@color/gris_1"
                    android:textSize="@dimen/title_size" />

                <Spinner
                    android:id="@+id/spCN"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/combo"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_all"
                    android:background="@drawable/esq1_gris2"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:id="@+id/llSiguiente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:enabled="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/tv_siguiente"
                        android:textColor="@color/gris_1"
                        android:textSize="@dimen/tv_siguiente" />

                    <Button
                        android:id="@+id/btnCN"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_margin="@dimen/margin_all"
                        android:background="@drawable/cir_verde2"
                        android:drawableLeft="@drawable/right"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="8dp"
                        android:textColor="@color/gris_1" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>